 21-Aug-2020  V1.630 Turn on the carbohydrate type options.
 26-Aug-2020  V1.631 Adjust polymer type counting -
 29-Aug-2020  V1.632 Add fix for missing data collection resolution
 30-Aug-2020  V1.633 Fix issue with subcategory aggregates with unit cardinality
 10-Sep-2020  V1.634 Trap missing data type exception in schema construction
 24-Sep-2020  V1.635 Use alternative mapping from pdbx_poly_seq_scheme
  1-Oct-2020  V1.636 Change handling of chemical component synonyms
  7-Oct-2020  V1.637 Update sequence cluster data and config path
 12-Oct-2020  V1.638 Update modeled residue counts and add option to use selective internal enumerations.
 13-Oct-2020  V1.639 Update example data and configuration
 13-Oct-2020  V1.640 Cast examples in schema, adjust handling of internal enumeration fallbacks
 21-Oct-2020  V1.641 Add DrugBank brand names to rcsb_chem_comp_synonyms
 23-Oct-2020  V1.642 Add rcsb_repository_holdings_combined_entry collection
 24-Oct-2020  V1.643 Incorporate obsolete/supersede item in rcsb_repository_holdings_combined_entry
 28-Oct-2020  V1.644 Make reference alignment options accessible from the configuration file
 31-Oct-2020  V1.645 Add taxonomy identifier salvage method
  1-Nov-2030  V1.646 Extend taxonomy identifier salvage method
  6-Dec-2020  V1.647 Update database server configuration
  9-Dec-2020  V1.648 Add validation slider image repository content type
 16-Dec-2020  V1.649 Add hydrogen atom counts -
 28-Dec-2020  V1.650 Corrections to indexing in multiprocessing RepoScanUtils(), fix CLI test cases
  6-Jan-2021  V1.651 Enumeration updates for selected polymer types.
  8-Jan-2021  V1.652 Add mongodb distinct() method.
  8-Jan-2021  V1.653 Enumeration updates for selected polymer types.
 12-Jan-2021  V1.654 Add primary citation author ORCIDs
 15-Jan-2021  V1.655 Back out Protein/NA/Oligosaccharide selected polymer type for now
 16-Jan-2021  V1.656 Further enumeration updates for polymer types.
 28-Jan-2021  V1.657 RSRCC -> RSCC